# enigma2-plugin-permanenttimeshift

./: Makefile.am  configure.ac
Components/: Makefile.am
Components/Converter/: Makefile.am  PTSBeforePTSPosition.py  PTSLiveEventPosition.py  PTSTimeshiftPosition.py
Components/Sources/: Makefile.am  PTSCurrentService.py
skin/: Makefile.am  skin.xml  skin_display.xml
src/: plugin.py
src/eitsave/: Makefile.am  eitsave.cpp
